# wavesplit

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  index.html  jsconfig.json  justfile  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.js
.github/workflows/: build-demucs-sidecar.yml  ci-frontend.yml  ci.yml  release.yml
core/: Cargo.toml  entitlements.plist  tauri.conf.json
core/capabilities/: default.json
core/icons/: icon.icns
core/src/: commands.rs  constants.rs  db.rs  lib.rs  main.rs  paths.rs  setup.rs
core/src/pipeline/: analysis.rs  download.rs  mod.rs  stems.rs
python/: analyze.py  pyproject.toml
src/: App.svelte
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  paths.rs  setup.rs
src-tauri/src/pipeline/: analysis.rs  bins.rs  download.rs  mod.rs  stems.rs
src/analysis/: analyze.py  demucs_runner.py  pyproject.toml
src/lib/: AddTrack.svelte  Setup.svelte  TrackList.svelte
ui/: App.svelte  main.js
ui/lib/: AddTrack.svelte  PipelineToast.svelte  Playback.svelte  Playback.svelte.test.js  Setup.svelte  Setup.svelte.test.js  TrackList.svelte  TrackList.svelte.test.js  playback.helpers.js  playback.helpers.test.js  tracklist.helpers.js  tracklist.helpers.test.js
